2008-03-10  Dan Winship  <danw@gnome.org>

	* configure.in: 2.4.0!

	* NEWS: update

2008-02-28  Dan Winship  <danw@gnome.org>

	* libsoup/soup-session.c (finalize): free priv->user_agent.
	#518798, Wouter Cloetens.
	(redirect_handler): PROPFIND is defined to be "safe and
	idempotent", so allow automatic redirects of it. (Pointed out by
	Christian Kellner. FIXME: need a way for apps to declare
	additional safe methods). Also, treat 302 like 307, not like 303,
	because that behavior is universal in the real world, despite the
	spec's protests.

	* tests/redirect-test.c (tests): update POST 302 behavior check

	* tests/Makefile.am (TESTS): oops, add redirect-test so it gets
	run by "make check"/"make distcheck"

	* tests/ssl-test.c: Re-revert the change from 2008-02-09; the
	problem with ssl-test.c was not that soup_gnutls_init() wasn't
	thread-safe, it's that the server thread doesn't do anything that
	would ever cause soup_gnutls_init() to be called, and so if the
	client thread doesn't start first, the server thread will run
	without initializing GNUTLS.

2008-02-27  Benjamin Otte  <otte@gnome.org>

	* libsoup/soup-socket.c: (read_from_network), (soup_socket_read),
	(soup_socket_read_until), (soup_socket_write):
	ensure that nread/nwrote parameters aren't NULL. They are also
	properly set on error paths now.

2008-02-25  Dan Winship  <danw@gnome.org>

	* configure.in: 2.3.4

	* NEWS: Update

2008-02-25  Dan Winship  <danw@gnome.org>

	* docs/reference/Makefile.am (DOC_MODULE): rename from libsoup to
	libsoup-2.4
	(TARGET_DIR): don't need to override this now

	* docs/reference/libsoup-2.4.types:
	* docs/reference/libsoup-2.4-docs.txt:
	* docs/reference/libsoup-2.4-overrides.txt:
	* docs/reference/libsoup-2.4-sections.txt: Rename these from
	unversioned, to match DOC_MODULE

	Fixes doc installation to work with devhelp again. #518384, Mart
	Raudsepp.

2008-02-25  Benjamin Otte  <otte@gnome.org>

	* libsoup/soup-address.h:
	* libsoup/soup-auth-domain.h: