@@ -135,8 +135,8 @@ main (int argc, char **argv)
 	int opt;
 	int port = SOUP_ADDRESS_ANY_PORT;
 
-	g_type_init ();
 	g_thread_init (NULL);
+	g_type_init ();
 	signal (SIGINT, quit);
 
 	while ((opt = getopt (argc, argv, "p:s:")) != -1) {
