@@ -70,8 +70,8 @@ test_init (int argc, char **argv, GOptionEntry *entries)
 	char *name;
 	GError *error = NULL;
 
-	g_type_init ();
 	g_thread_init (NULL);
+	g_type_init ();
 
 	name = strrchr (argv[0], '/');
 	if (!name++)
